--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
     <head>
         <meta charset="utf-8" />
-        <title>Документ без названия</title>
+        <title>SITE_TWO</title>
     </head>
     <body>
 
